<resources>
    <string name="app_name">Mi Marca</string>
    <string name="mi_marca">Mi Marca</string>
    <string name="logo">TODO</string>
    <string name="documento">Documento</string>
    <string name="contrasenia">Contraseña</string>
    <string name="loginbutton">LoginButton</string>
    <string name="volverbutton">Volver</string>
    <string name="ingresar">Ingresar</string>
    <string name="UserId">Documento</string>
    <string name="Password">Contraseña</string>
    <string name="userId">Documento</string>
    <string name="navigation_drawer_open">Ver</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="menu_marcar">Marcar</string>
    <string name="menu_mi_ubicación">Mi Ubicación</string>
    <string name="menu_parte_mensual">Parte Mensual</string>
    <string name="menu_documentación">Documentación</string>
    <string name="menu_mensaje">Mensaje</string>
    <string name="menu_salir">Salir</string>
    <string name="btnsalida">btnSalida</string>
    <string name="tvsalida">tvSalida</string>
    <string name="tvdescanso">tvDescanso</string>
    <string name="btndescanso">btnDescanso</string>
    <string name="tventrada">tvEntrada</string>
    <string name="btnentrada">btnEntrada</string>
    <string name="asunto_mensaje">Asunto:</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnSalida">TODO</string>

    <string name="btnretorno">btnretorno</string>
    <string name="back">back</string>
    <string name="entrada">Entrada</string>
    <string name="salida">Salida</string>
    <string name="descanso">Descanso</string>
    <string name="retorno">Retorno</string>
    <string name="usuario">Usuario</string>
    <string name="selecciona_imagen">Selecciona Imagen</string>
    <string name="imgsubida">imgSubida</string>
    <string name="actualizar">Actualizars</string>

</resources>