<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Marca">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/descanso"
        android:layout_width="151dp"
        android:layout_height="66dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:background="@color/colorAccent"
        android:color="@color/colorAccentDark"
        android:drawableStart="@drawable/iconfinder_ic_pause_circle_outline_48px_352583"
        android:drawableLeft="@drawable/iconfinder_ic_pause_circle_outline_48px_352583"
        android:onClick="Descanso"
        android:state_pressed="true"
        android:text="@string/descanso"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/entrada"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/entrada"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/entrada"
        android:layout_width="148dp"
        android:layout_height="65dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="38dp"
        android:background="@color/colorAccent"
        android:color="@color/colorAccentDark"
        android:drawableStart="@drawable/iconfinder_exit_enter_leave_door_in_2931189"
        android:drawableLeft="@drawable/iconfinder_exit_enter_leave_door_in_2931189"
        android:onClick="Entrada"
        android:state_pressed="true"
        android:text="@string/entrada"
        android:elevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/salida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/salida"
        android:layout_width="153dp"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="80dp"
        android:background="@color/colorAccent"
        android:color="@color/colorAccentDark"
        android:drawableStart="@drawable/iconfinder_exit_enter_leave_door_out_2931185"
        android:drawableLeft="@drawable/iconfinder_exit_enter_leave_door_out_2931185"
        android:onClick="Salida"
        android:state_pressed="true"
        android:text="@string/salida"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/retorno"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/retorno"
        app:layout_constraintTop_toBottomOf="@+id/descanso"
        app:layout_constraintVertical_bias="0.721" />

    <Button
        android:id="@+id/retorno"
        android:layout_width="152dp"
        android:layout_height="68dp"
        android:background="@color/colorAccent"
        android:color="@color/colorAccentDark"
        android:drawableStart="@drawable/iconfinder_play_1894657"
        android:drawableLeft="@drawable/iconfinder_play_1894657"
        android:onClick="Retorno"
        android:state_pressed="true"
        android:text="@string/retorno"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/descanso"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/descanso"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

</androidx.constraintlayout.widget.ConstraintLayout>